feat: graceful shutdown with  drain signal and browser cleanup
